# macon

./: .gitignore  .readthedocs.yaml  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: docs.yml
docs/: conf.py  getting_started.rst  index.rst
docs/api/: index.rst
docs/user_guide/: architecture.rst  cli.rst  configuration.rst  defining_tables.rst  filtering.rst  index.rst
src/macon/: common.py  config.py
src/macon/cli/: common_options.py  load_commands.py
src/macon/cli/local/: base.py  test_classes.py  top.py
src/macon/cli/remote/: base.py  test_classes.py  top.py
src/macon/cli/server/: options.py  top.py
src/macon/client/: __init__.py  base.py  client.py
src/macon/db/: __init__.py  base.py  session.py  test_classes.py
src/macon/db_funcs/: __init__.py  delete.py  filter.py  read.py  update.py
src/macon/db_oper/: __init__.py  base.py  catalog_tag.py  test_classes.py
src/macon/local_async/: __init__.py  base.py  test_classes.py
src/macon/local_sync/: __init__.py  base.py  funcs.py  test_classes.py
src/macon/models/: __init__.py  filtering.py  test_classes.py  utils.py  web.py
src/macon/remote_async/: __init__.py  base.py
src/macon/remote_sync/: __init__.py  base.py  funcs.py  test_classes.py
src/macon/router/: __init__.py  app.py  base.py  test_classes.py
tests/: conftest.py  test_cli_local.py  test_cli_local_coverage.py  test_cli_remote.py  test_cli_remote_coverage.py  test_cli_server.py  test_client.py  test_common.py  test_coverage_cli.py  test_coverage_client.py  test_coverage_client_client.py  test_coverage_common.py  test_coverage_config.py  test_coverage_db_base.py  test_coverage_db_funcs.py  test_coverage_db_oper.py  test_coverage_db_session.py  test_coverage_local_async.py  test_coverage_remote.py  test_coverage_router.py  test_coverage_router_app.py  test_db_base.py  test_db_funcs_delete.py  test_db_funcs_delete_extended.py  test_db_funcs_filter.py  test_db_funcs_filter_coverage.py  test_db_funcs_filter_errors.py  test_db_funcs_filter_extended.py  test_db_funcs_read.py  test_db_funcs_update.py  test_db_funcs_update_extended.py  test_db_oper.py  test_db_oper_extended.py  test_db_oper_table.py  test_local_async.py  test_local_async_extended.py  test_local_async_full.py  test_local_sync.py  test_local_sync_full.py  test_models.py  (+10 more)
